--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,11 @@
         {
             "type": "composer",
             "url": "https://packages.drupal.org/8"
+        },
+        {
+            "type": "vcs",
+            "url": "git@github.com:ryan-l-robinson/Drupal-alternate-titles-module.git",
+            "branch": "main"
         }
     ],
     "require": {
@@ -22,7 +27,8 @@
         "drupal/core-recommended": "^9.1",
         "drupal/jquery_ui_autocomplete": "^2.0",
         "drupal/module_filter": "^4.0",
-        "drush/drush": "^11.0"
+        "drush/drush": "^11.0",
+        "ryan_robinson/alternate_titles": "dev-main"
     },
     "require-dev": {
         "drupal/console": "^1.9",
